# loggit

./: Cargo.toml  README.md  RELEASE_NOTES.md  app_14-4-2025_10:19:6.txt  app_18-4-2025_9:10:41.txt  app_18-4-2025_9:10:55.txt  app_28-3-2025_9:46:24.txt  app_28-3-2025_9:49:45.txt  int_test.sh  test.sh  test_log_17-4-2025_16:41:55.txt
.github/workflows/: rust.yml
docs/: DOC_DEVELOPER.md  DOC_PREVIEW.md
src/: helper.rs  lib.rs  logger.rs
src/logger/: archivation.rs  file_handler.rs  formatter.rs  from_env.rs  from_file_config.rs  set_errors.rs
src/logger/file_handler/: file_formatter.rs  file_manager.rs  file_name.rs
src/tests/: file_manager.rs  from_env_config.rs  from_env_file_config.rs  from_ini_file_config.rs  from_json_file_config.rs  mod.rs
tests/: archivation_rotation.rs  mod.rs  multi_thread.rs
