[package]
name = "loggit"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Loggit is a lightweight, easy-to-use logging library for Rust."
homepage = "https://github.com/DobbiKov/loggit"
repository = "https://github.com/DobbiKov/loggit"
readme = "README.md"
authors = ["DobbiKov <dobbikov@gmail.com>"]

[dependencies]
chrono = "0.4.40"
once_cell = "1.21.1"
thiserror = "2.0.12"
zip = "2.5.0"
