[package]
name = "loggit"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Loggit is a lightweight, easy-to-use logging library for Rust."
documentation = "https://docs.rs/loggit/"
homepage = "https://github.com/DobbiKov/loggit"
repository = "https://github.com/DobbiKov/loggit"
readme = "README.md"
authors = ["DobbiKov <dobbikov@gmail.com>"]

[dependencies]
chrono = "0.4.40"
dirs = "6.0.0"
env-file-reader = "0.3.0"
once_cell = "1.21.1"
rust-ini = "0.21.1"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
zip = "2.5.0"
